--- a/api/package.json
+++ b/api/package.json
@@ -14,9 +14,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
-    "cars": "^1.1.6",
     "concurrently": "^7.6.0",
+    "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.8.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20"
