--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js",
     "server": "nodemon index.js",
     "client": "npm start --prefix ../client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "admin": "npm start --prefix ../admin",
+    "dev": "concurrently \"npm run server\" \"npm run admin\""
   },
   "keywords": [],
   "author": "",
